speakers, call, registration

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,4 +1,10 @@
 - title: About FMQC
   url: /about
+- title: Call for Contributions
+  url: /call
+- title: Invited Speakers
+  url: /speakers
+- title: Registration
+  url: /registration
 - title: Organizers
   url: /organizers
